ThreadsListHandleInErrorHandlingTest.java fails in printing all threads

XMLWordPrintable

    • b05

      Test runtime/ErrorHandling/ThreadsListHandleInErrorHandlingTest.java

      fails to find a pattern
      "=>.* JavaThread \"main\" .* _threads_hazard_ptr=0x[0-9A-Fa-f][0-9A-Fa-f]*, _nested_threads_hazard_ptr_cnt=0.*"

      Basically it fails because stacktrace was not generated.

      Threads class SMR info:
      _java_thread_list=0x00007fd7540a4b70, length=11, elements={
      0x00007fd7ac022000, 0x00007fd7ac209000, 0x00007fd7ac20b800, 0x00007fd7ac214800,
      0x00007fd7ac217800,
      [error occurred during error reporting (printing all threads), id 0xb, SIGSEGV (0xb) at pc=0x00007fd7b319370a]

      VM state:not at safepoint (normal execution)

            Assignee:
            Daniel Daugherty
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: